# Python_APIs_Learn

./: README.md  requirements.txt
Django/: requirements.txt
Django/api_rest/: urls.py
FastAPI/: docker-compose.yml
FastAPI/app/: main.py
FastAPI_Old/app/: Dockerfile
api_rest/: admin.py  models.py  serializers.py  urls.py  views.py
api_rest/features/: authors.py  users.py
api_rest/migrations/: 0001_initial.py  0002_author_book.py
api_rest/models/: user.py
api_root/: settings.py  urls.py
backend-socioemocional/Email_Templates/: invite-user.html
backend-socioemocional/socioemocional/: docker-compose.yml
fast_api/: README.md  docker-compose.yml  pyproject.toml  settings.py
fast_api/app/src/features/: feature_base.py
fast_api/app/src/features/users/: users_controller.py
fast_api/app/src/features/users/methods/: __init__.py  create.py  detail.py  listall.py
fast_api/app/src/infraestructure/results/: default.py  user.py
fast_api/src/: Dockerfile  main.py
fast_api/src/core/: __init__.py  user.py
fast_api/src/data/: database.py
fast_api/src/features/: base_features.py  feature_base.py
fast_api/src/features/users/: users_controller.py
fast_api/src/features/users/methods/: create.py  list.py  listall.py
fast_api/src/infraestructure/extensions/: queries.py
fast_api/src/infraestructure/schema_results/: register_result.py  user_schemas.py
mock_json_api/: Dockerfile  README.md  docker-compose.yml  fly.toml  main.py
mock_json_api/files/: example.json  questions_1.json  questions_2.json  questions_3.json
questions_api/: main.py
(+108 files in other folders)
